--- a/src/MovieLibrary/wwwroot/css/site.css
+++ b/src/MovieLibrary/wwwroot/css/site.css
@@ -69,3 +69,37 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.movies-list {
+  list-style-type: none;
+}
+
+.movie-info {
+  display: flex;
+  flex-direction: row;
+
+  padding: 20px;
+}
+
+.movie-info-poster {
+  margin-right: 12px;
+  flex: none;
+}
+
+.movie-info-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-info-title {
+  font-size: 1.4em;
+}
+
+.movie-info-table {
+  margin-bottom: 1em;
+}
+
+.movie-info-table-key {
+  font-weight: 600;
+  padding-right: 60px;
+}
