--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -66,7 +66,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <p>
+                <p class="movie-info-summary">
                     @movieInfo.Summary
                 </p>
             </div>
