--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -47,7 +47,7 @@
     {
         var movieInfo = movie.MovieInfo;
         <li class="movie-info">
-            <img class="movie-info-poster" src="@GetSafePosterUri(movieInfo.PosterUri)" alt="Poster for movie &quot;@movieInfo.Title&quot;" width="240" />
+            <img class="movie-info-poster" src="@GetSafePosterUri(movieInfo.PosterUri)" alt="Poster for movie &quot;@movieInfo.Title&quot;" />
             <div class="movie-info-details">
                 <div class="movie-info-table-details-and-actions">
                     <div class="movie-info-table-details">
