--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -69,9 +69,15 @@
                         </tr>
                     </tbody>
                 </table>
-                <p class="movie-info-summary">
-                    @movieInfo.Summary
-                </p>
+                @if (!String.IsNullOrEmpty(movieInfo.Summary))
+                {
+                    <div class="movie-info-summary">
+                        <a data-toggle="collapse" href="#collapseSummary-@movie.Id.Value">Click for Summary</a>
+                        <div id="collapseSummary-@movie.Id.Value" class="collapse">
+                            @movieInfo.Summary
+                        </div>
+                    </div>
+                }
             </div>
         </li>
     }
