--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -31,7 +31,7 @@
     }
 }
 
-<h1>Movies to get</h1>
+<h3 class="text-center">@ViewData["Title"]</h3>
 
 <form method="post">
     <div asp-validation-summary="All"></div>
