--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -31,7 +31,7 @@
     }
 }
 
-<h1>Movies to see</h1>
+<h3 class="text-center">@ViewData["Title"]</h3>
 
 <ul class="movies-list">
     @foreach (var movie in Model.Movies)
