Adjust positioning of movie URL input

--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -37,7 +37,7 @@
     <div asp-validation-summary="All"></div>
     <p>
         <label asp-for="NewMovieToGet.MovieUri">Movie URL:</label>
-        <input asp-for="NewMovieToGet.MovieUri" />
+        <input asp-for="NewMovieToGet.MovieUri" size="40" />
         <button type="submit">Add</button>
     </p>
 </form>
