--- a/src/MovieLibrary/wwwroot/css/site.css
+++ b/src/MovieLibrary/wwwroot/css/site.css
@@ -71,6 +71,7 @@ body {
 }
 
 .movies-list {
+  padding-left: 0;
   list-style-type: none;
 }
 
@@ -78,7 +79,7 @@ body {
   display: flex;
   flex-direction: row;
 
-  padding: 20px;
+  padding: 20px 0 20px 0;
 
   border-bottom: 1px solid gray;
 }
