Implement deletion of seen movies

--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -84,7 +84,7 @@
                     <div class="movie-info-actions">
                         @if (User.IsInRole("MoviesToSeeAdder"))
                         {
-                            <a asp-controller="MoviesToGet" asp-action="MoveToMoviesToSee" asp-route-id="@movie.Id.Value">To See</a>
+                            <a asp-controller="MoviesToGet" asp-action="MoveToMoviesToSee" asp-route-id="@movie.Id.Value">To see</a>
                         }
                     </div>
                 </div>
