--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -33,15 +33,18 @@
 
 <h3 class="text-center">@ViewData["Title"]</h3>
 
-<form method="post">
-    <div asp-validation-summary="All"></div>
-    <div class="input-group">
-        <div class="input-group-append">
-            <input class="form-control" asp-for="NewMovieToGet.MovieUri" placeholder="Movie URL" aria-label="Movie URL" size="40" />
-            <button class="btn btn-primary" type="submit">Add</button>
+@if (User.IsInRole("MoviesToGetAdder"))
+{
+    <form method="post">
+        <div asp-validation-summary="All"></div>
+        <div class="input-group">
+            <div class="input-group-append">
+                <input class="form-control" asp-for="NewMovieToGet.MovieUri" placeholder="Movie URL" aria-label="Movie URL" size="40" />
+                <button class="btn btn-primary" type="submit">Add</button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+}
 
 <ul class="movies-list">
     @foreach (var movie in Model.Movies)
