--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -33,6 +33,19 @@
 
 <h3 class="text-center">@ViewData["Title"]</h3>
 
+@if (User.IsInRole("MoviesToSeeAdder"))
+{
+    <form method="post">
+        <div asp-validation-summary="All"></div>
+        <div class="input-group">
+            <div class="input-group-append">
+                <input class="form-control" asp-for="NewMovieToSee.MovieUri" placeholder="Movie URL" aria-label="Movie URL" size="40" />
+                <button class="btn btn-primary" type="submit">Add</button>
+            </div>
+        </div>
+    </form>
+}
+
 <ul class="movies-list">
     @foreach (var movie in Model.Movies)
     {
