--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -88,7 +88,15 @@
                     <div class="movie-info-actions">
                         @if (User.IsInRole("CanMarkMoviesAsSeen"))
                         {
-                            <a asp-controller="MoviesToSee" asp-action="MarkMovieAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+                            <div>
+                                <a asp-action="MarkMovieAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+                            </div>
+                        }
+                        @if (User.IsInRole("CanDeleteMoviesToSee"))
+                        {
+                            <div>
+                                <a asp-action="DeleteMovie" asp-route-id="@movie.Id.Value">Delete</a>
+                            </div>
                         }
                     </div>
                 </div>
