--- a/src/MovieLibrary/wwwroot/css/site.css
+++ b/src/MovieLibrary/wwwroot/css/site.css
@@ -136,3 +136,8 @@ body {
 [data-toggle="collapse"]:not(.collapsed) .if-collapsed {
   display: none;
 }
+
+.nav-link.active {
+  background-color: #c8c8c8;
+  border-radius: .25rem;
+}
